--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <div class="container">
             <section class="products">
                 <article class="product">
-                    <img src="https://picsum.photos/300/300" alt="">
+                    <img src="c:\Users\rayan\OneDrive\Imagens\lanche 1.jfif" alt="">
                     <h2>Product 1</h2>
                     <p>Price: $10.00</p>
                     <button class="add-to-cart" data-id="1" data-name="Product 1" data-price="10.00">Adicionar ao Carrinho</button>
@@ -447,7 +447,7 @@
                 <p>Grátis</p>
                 <button onclick="adicionarAoCarrinho('Granola', 0)">Adicionar ao Carrinho</button>
             </div>
-            <div class="menu-item" data-name="Leite" 
+            <div class="menu-item" data-name="Leite"
             <h4>Leite em pó</h4>
             <p>Grátis</p>
             <button onclick="adicionarAoCarrinho (Leite em pó 0);>Adicionar ao Carrinho</button>
